Refactor and implement pandas
This commit refactors the code to use the pandas library instead for
easier data manipulation and summarization.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,20 @@ beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.8.30
 charset-normalizer==3.4.0
+exceptiongroup==1.2.2
 idna==3.10
+iniconfig==2.0.0
+numpy==2.2.6
+packaging==24.2
+pandas==2.3.0
+pluggy==1.5.0
+pytest==8.3.4
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.3
+six==1.17.0
 soupsieve==2.6
 toml==0.10.2
+tomli==2.2.1
+tzdata==2025.2
 urllib3==2.2.3
