--- a/config.toml
+++ b/config.toml
@@ -9,3 +9,6 @@ dashboard_url_base  = "https://potko.ekoplus.si/vs_uporabniki/dashboard"
 [ dates ]
 date_from           = "01.06.2025"
 date_to             = "30.06.2025"
+
+[ output ]
+mode                = "default" # default | months
