Implement cost calculation for months mode
This commit implements cost calculation for `months` mode. It introduces
new config values for BIO and MKO costs and minimum costs.

It also fixes the `years` mode issues and uses pivot table to sum up BIO
and MKO in a given year.

--- a/config.toml
+++ b/config.toml
@@ -12,3 +12,9 @@ date_to             = "30.06.2025"
 
 [ output ]
 mode                = "default" # default | months | years
+
+[ cost ]
+bio                 = 0.1335
+mko                 = 2.4809
+min_bio             = 1.068
+min_mko             = 14.8854
