--- a/config.toml
+++ b/config.toml
@@ -18,3 +18,6 @@ bio                 = 0.1335
 mko                 = 2.4809
 min_bio             = 1.068
 min_mko             = 14.8854
+
+[ logging ]
+level               = "INFO"
